# cheapskate

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.bot  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cheapskate-workflow.yml  cheapskate-workflow.yml_bak
infra/: Dockerfile  docker-compose-prod.yml  entrypoint_api.sh  entrypoint_api_migrations.sh  entrypoint_bot.sh
src/: .env.example  api.py  bot.py
src/backend/: alembic.ini  db_init.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 04937da8fd99_add_currency_model.py  07f29e2b1156_first_migration.py  1da02ff3a5a2_add_is_visible_to_category.py  22c1643b244b_add_restrict_in_expense_category_on_.py  23ad25779d83_add_settings_model.py  62f0822c7ee0_add_report.py  88ed4b8edf9f_add_user_model.py  929c00be12a7_expense_amount_float_to_decimal.py  9a933b32243f_budget_amount_integer_to_decimal.py  b91e5fe245f7_add_description_field_to_the_expense.py  e47f7c87fabb_add_expense_model.py
src/backend/app/: exceptions.py  main.py  utils.py
src/backend/app/api/: routers.py  validators.py
src/backend/app/core/: base.py  config.py  constants.py  db.py
src/backend/app/crud/: __init__.py  base.py  category.py  cheapskate.py  currency.py  expense.py  report.py  setting.py  user.py
src/backend/app/dependencies/: authorization.py
src/backend/app/models/: __init__.py  category.py  cheapskate.py  currency.py  expense.py  report.py  setting.py  user.py
src/backend/app/repositories/: __init__.py  base.py  category.py  currency.py  expense.py  report.py  setting.py  user.py
src/backend/app/schemas/: authorization.py  category.py  cheapskate.py  currency.py  expense.py  report.py  setting.py  statistic.py  user.py
src/backend/app/services/: base.py  category.py  currency.py  expense.py  setting.py  statistic.py  user.py
src/bot/: __main__.py  api_requests.py  commands.py  config.py  constants.py  decorators.py  exceptions.py  handlers.py  logging_messages.py  messages.py  serializers.py  utils.py  validators.py
src/bot/callbacks/: currencies.py  expenses.py  report.py  settings.py  statistic.py
src/bot/constants/: commands.py  constants.py  logging_messages.py  telegram_messages.py
src/bot/handlers/: add_category_conversation.py  categories.py  command_handlers.py  common.py  currency_handlers.py  errors.py  expense_handlers.py  main_handlers.py  report.py  report_handlers.py  settings_handlers.py  statistic_handlers.py
src/bot/handlers/currencies/: __init__.py  add_currency.py  change_currency.py
src/bot/handlers/expenses/: __init__.py  add_expense.py  delete_expense.py
src/bot/handlers/settings/: __init__.py  change_budget.py  change_default_currency.py  get_settings.py
src/bot/keyboards/: currencies.py  expenses.py  report.py  settings.py  statistic.py
src/bot/middlewares/: auth.py  http_client.py
src/bot/serializers/: base.py  report.py  settings.py
src/bot/services/: expenses.py  users.py
src/bot/states/: categories.py  currencies.py  settings.py
src/bot/utils/: keyboards.py  utils.py  validators.py
src/configs/: api_settings.py  constants.py  enums.py  logger.py
src/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  main.tsx  styles.css
src/tests/test_backend/: conftest.py
src/utils/: api_settings.py  configs.py  constants.py  logger.py
tests/: test_smoke.py
(+56 files in other folders)
