[tool.poetry]
name = "cheapskate"
version = "0.2.0"
description = "Financial control telegram bot and API"
authors = ["Ilya Malashenko <ilia.malashenko8@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
aiohttp = "^3.8.5"
greenlet = "^3.0.3"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiogram = "^3.13.1"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.3.7"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM"  # flake8-simplify
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
