[project]
name = "cheapskate"
version = "0.3.1"
description = "Financial control telegram bot and API"
authors = ["Ilya Malashenko <ilia.malashenko8@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiogram>=3.19.0",
    "aiohttp>=3.11.14",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]


[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM"  # flake8-simplify
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
]


[tool.ruff.format]
line-ending = "lf"
