[project]
name = "cheapskate"
version = "0.3.3"
description = "Financial control telegram bot and API"
authors = ["Ilya Malashenko <ilia.malashenko8@gmail.com>"]
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
    "aiogoogle>=5.17.0",
    "aiogram>=3.27.0",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]


[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM"  # flake8-simplify
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
]


[tool.ruff.format]
line-ending = "lf"
